// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`examples-page Basic renders as expected 1`] = `
<div>
  <div>
    <div>
      <a
        className="unprose mb18 block color-blue-on-hover"
        href="#container-title-one"
      >
        <h2
          className="txt-bold unprose"
          id="container-title-one"
        >
          Container title one
           
          <span
            data-swiftype-index="false"
          >
            (
            2
            )
          </span>
        </h2>
      </a>
      <div
        className="grid grid--gut36"
      >
        <div
          className="mb18 col col--12 col--6-ml"
        >
          <a
            className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
            href="path"
          >
            <div
              className="relative h120 mb6"
            >
              <div
                className="relative h120 mb12"
                style={
                  Object {
                    "backgroundImage": "url('./files/simple-map.png')",
                    "backgroundPosition": "center",
                    "backgroundSize": "100% auto",
                  }
                }
              />
            </div>
            <div>
              
              <div
                className="mb6"
              >
                Example one
              </div>
              <div
                className="color-gray color-gray-on-hover"
              >
                Lorem ipsum dolor sit amet.
              </div>
            </div>
          </a>
        </div>
        <div
          className="mb18 col col--12 col--6-ml"
        >
          <a
            className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
            href="path"
          >
            <div
              className="relative h120 mb6"
            >
              <div
                className="relative h120 mb12"
                style={
                  Object {
                    "backgroundImage": "url('./files/simple-map.png')",
                    "backgroundPosition": "center",
                    "backgroundSize": "100% auto",
                  }
                }
              />
            </div>
            <div>
              
              <div
                className="mb6"
              >
                Example two
              </div>
              <div
                className="color-gray color-gray-on-hover"
              >
                Consectetur adipisicing elit
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <a
        className="unprose mb18 block color-blue-on-hover"
        href="#container-title-two"
      >
        <h2
          className="txt-bold unprose"
          id="container-title-two"
        >
          Container title two
           
          <span
            data-swiftype-index="false"
          >
            (
            3
            )
          </span>
        </h2>
      </a>
      <div
        className="grid grid--gut36"
      >
        <div
          className="mb18 col col--12 col--6-ml"
        >
          <a
            className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
            href="path"
          >
            <div
              className="relative h120 mb6"
            >
              <div
                className="relative h120 mb12"
                style={
                  Object {
                    "backgroundImage": "url('./files/simple-map.png')",
                    "backgroundPosition": "center",
                    "backgroundSize": "100% auto",
                  }
                }
              />
            </div>
            <div>
              
              <div
                className="mb6"
              >
                Example one
              </div>
              <div
                className="color-gray color-gray-on-hover"
              >
                Ded do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </div>
            </div>
          </a>
        </div>
        <div
          className="mb18 col col--12 col--6-ml"
        >
          <a
            className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
            href="path"
          >
            <div
              className="relative h120 mb6"
            >
              <div
                className="relative h120 mb12"
                style={
                  Object {
                    "backgroundImage": "url('./files/simple-map.png')",
                    "backgroundPosition": "center",
                    "backgroundSize": "100% auto",
                  }
                }
              />
            </div>
            <div>
              
              <div
                className="mb6"
              >
                Example two
              </div>
              <div
                className="color-gray color-gray-on-hover"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </div>
            </div>
          </a>
        </div>
        <div
          className="mb18 col col--12 col--6-ml"
        >
          <a
            className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
            href="path"
          >
            <div
              className="relative h120 mb6"
            >
              <div
                className="relative h120 mb12"
                style={
                  Object {
                    "backgroundImage": "url('./files/simple-map.png')",
                    "backgroundPosition": "center",
                    "backgroundSize": "100% auto",
                  }
                }
              />
            </div>
            <div>
              
              <div
                className="mb6"
              >
                Example two
              </div>
              <div
                className="color-gray color-gray-on-hover"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`examples-page Cards with no images and full-width renders as expected 1`] = `
<div>
  <div>
    <div>
      <a
        className="unprose mb18 block color-blue-on-hover"
        href="#container-title-one"
      >
        <h2
          className="txt-bold unprose"
          id="container-title-one"
        >
          Container title one
           
          <span
            data-swiftype-index="false"
          >
            (
            2
            )
          </span>
        </h2>
      </a>
      <div
        className=""
      >
        <div
          className="mb18 border-b border--darken10"
        >
          <a
            className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
            href="path"
          >
            
            <div>
              
              <div
                className="mb6"
              >
                Example one
              </div>
              <div
                className="color-gray color-gray-on-hover"
              >
                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </div>
            </div>
          </a>
        </div>
        <div
          className="mb18 border-b border--darken10"
        >
          <a
            className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
            href="path"
          >
            
            <div>
              
              <div
                className="mb6"
              >
                Example two
              </div>
              <div
                className="color-gray color-gray-on-hover"
              >
                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <a
        className="unprose mb18 block color-blue-on-hover"
        href="#container-title-two"
      >
        <h2
          className="txt-bold unprose"
          id="container-title-two"
        >
          Container title two
           
          <span
            data-swiftype-index="false"
          >
            (
            3
            )
          </span>
        </h2>
      </a>
      <div
        className=""
      >
        <div
          className="mb18 border-b border--darken10"
        >
          <a
            className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
            href="path"
          >
            
            <div>
              
              <div
                className="mb6"
              >
                Example one
              </div>
              <div
                className="color-gray color-gray-on-hover"
              >
                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </div>
            </div>
          </a>
        </div>
        <div
          className="mb18 border-b border--darken10"
        >
          <a
            className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
            href="path"
          >
            
            <div>
              
              <div
                className="mb6"
              >
                Example two
              </div>
              <div
                className="color-gray color-gray-on-hover"
              >
                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </div>
            </div>
          </a>
        </div>
        <div
          className="mb18 border-b border--darken10"
        >
          <a
            className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
            href="path"
          >
            
            <div>
              
              <div
                className="mb6"
              >
                Example two
              </div>
              <div
                className="color-gray color-gray-on-hover"
              >
                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
